# pytorch2tikz

./: .gitignore  LICENSE  README.md  dev.ipynb  pyproject.toml  setup.py  test.py  test_out.tex
examples/AlexNet/: alex_net.py  out.tex
examples/VGG16/: out.tex  vgg16.py
pycore/: __init__.py  arch.py  block_factory.py  block_sequence.py  blocks.py  blocks_1D.py  blocks_2D.py  blocks_3D.py  blocks_abcs.py  blocks_input.py  blocks_tex.py  constants.py  mapping.py  module_graph.py  tikzeng.py
pycore/block/: D1.py  D2.py  D3.py  Dn.py  abcs.py  factory.py  inputs.py  sequence.py  tex.py
pyexamples/: unet.py
pytorch2tikz/: README.md  __init__.py  arch.py  constants.py  module_graph.py  utils.py
pytorch2tikz/block/: D1.py  __init__.py  abcs.py  connections.py  factory.py  inputs.py  sequence.py
